edk2-cloud-hypervisor (20250503-1) stable unstable bionic focal impish jammy kinetic; urgency=low

  * Upgrade to a54f262b

edk2-cloud-hypervisor (20220924-1) stable unstable bionic focal impish jammy kinetic; urgency=low

  * Upgrade to c1166d5

-- Anatol Belski <anbelski@linux.microsoft.com>  Sat, 24 Sep 2022 00:46:41 +0200

edk2-cloud-hypervisor (20220715-1) stable unstable bionic focal impish jammy kinetic; urgency=low

  * Port RPM  to DEB

-- Anatol Belski <anbelski@linux.microsoft.com>  Wed, 27 Jul 2022 00:46:41 +0200
