@@ -1,7 +1,7 @@
 Source: edk2-cloud-hypervisor
 Maintainer: Anatol Belski <anbelski@linux.microsoft.com>
 Homepage: https://github.com/cloud-hypervisor/edk2/tree/ch
-Build-Depends: debhelper, debhelper-compat (= 11), gcc, g++, binutils, python3, python3-setuptools, python3-pexpect, iasl, make, nasm, sed, uuid-dev
+Build-Depends: debhelper, debhelper-compat (= 11), gcc, g++, binutils, python3, python3-setuptools, python3-pexpect, iasl, make, nasm, sed, uuid-dev, libdistro-info-perl
 
 
 Package: edk2-cloud-hypervisor
