@@ -1,11 +1,13 @@
+diff --git a/debian/changelog b/debian/changelog
+index 2262569..2af45e0 100644
 --- a/debian/changelog
 +++ b/debian/changelog
 @@ -1,3 +1,8 @@
-+edk2-cloud-hypervisor-gl (20250503-1) testing; urgency=low
++edk2-cloud-hypervisor-gl (202511-2) experimental unstable testing stable oldstable; urgency=low
 +
-+  * rebuild package from https://github.com/cloud-hypervisor/obs-packaging 
++  * rebuild package from https://github.com/cloud-hypervisor/obs-packaging
 +  * rename package
 +
- edk2-cloud-hypervisor (20250503-1) stable unstable bionic focal impish jammy kinetic; urgency=low
+ edk2-cloud-hypervisor (202511-1) experimental unstable testing stable oldstable; urgency=low
  
-   * Upgrade to a54f262b
+   * Upgrade to edk2-stable202511
